k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-babyfoot
spec:
  selector:
    app:  app-babyfoot
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  sessionAffinity: None
  type: ClusterIP
