k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: app-babyfoot-server-ingress
spec:
  rules:
  - host: babyfoot.molecule-science.com
    http:
      paths:
      - backend:
          service:
            name: app-babyfoot
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - babyfoot.molecule-science.com
    secretName: app-babyfoot-secret
